# webcraft-os

./: .gitignore  AGENTS.md  FETCH_HEAD  HEAD  README.md  config  index  logs.txt  packed-refs  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: darts-gh-pages.yml  darts-scoreboard-build.yml
cli/: main.py
docs/: README.md
examples/: README.md
logs/refs/heads/: main_n8n
objects/pack/: pack-61030df840401a0a8f8d07d608ea64bcb08ec3c9.idx  pack-61030df840401a0a8f8d07d608ea64bcb08ec3c9.pack  pack-61030df840401a0a8f8d07d608ea64bcb08ec3c9.rev
projects/commercial-webshop-builder/: AGENTS.md  NEXT-STEP.md  README.md  agent-guardrails.md  chat-vs-github-workflow.md  codex-handoff.md  current-status.md  decisions.md  deep-research-brief.md  first-7-days.md  github-operating-model.md  metrics.md  mvp-plan.md  next-action.md  offer-hypothesis.md  outreach-dm-v1.md  pr_spike03_body.md  product-definition.md  product-page-copy-v1.md  project-instructions.md  research-questions.md  spike04_issue.md  tooling.md  validation-log.md  validation-summary.md
projects/darts-live-camera-support/: AGENTS.md  CODESPACES_WORKFLOW.md  MVP_SPEC.md  PHASE_0_GO_NO_GO.md  PHASE_1_COMPLETION_SUMMARY.md  PROJECT_PROMPT.md  README.md  ROADMAP.md  SPRINTS.md  pr_body.md  pr_deploy_body.md
prompts/: README.md
refs/heads/: main_n8n
spikes/spike03-intake-caseview/: 00-start-here.md  HANDOFF-TESTER.md  README.md
spikes/spike04-manual-source-check/: NEXT-STEP.md  README.md  START-HERE.md
tests/: test_commands.py
webcraft-studios-os/cli/: __init__.py  commands.py
(+211 files in other folders)
