[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webcraft-studios-os"
version = "0.1.0"
description = "Minimale CLI-runtime voor Webcraft Studios OS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
wcsos = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
